[package]
name = "host"
version = "0.1.0"
authors = ["Marek Bernat <marek.bernat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["ptrace"] }
sysinfo = "0.29.10"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
